--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "react-hot-loader": "^4.8.0",
+    "standard": "^12.0.1",
+    "standard-loader": "^6.0.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "babel-preset-react": "^6.24.1",
     "create-react-class": "^15.6.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
